add footer and features

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
     "cSpell.words": [
-        "shoppingcart"
+        "Mavic",
+        "Santini",
+        "shoppingcart",
+        "Willier"
     ]
 }
