--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "4.0.3",
+    "react-stripe-checkout": "^2.6.3",
     "styled-components": "^5.3.5",
     "web-vitals": "^1.0.1"
   },
